Date and table alignment fixed

--- a/src/components/data-table/index.scss
+++ b/src/components/data-table/index.scss
@@ -73,6 +73,9 @@
             cursor: pointer;
           }
         }
+        .no-record{
+          display: table-cell !important;
+        }
       }
     }
     button {
